# camp2ascii

./: .gitignore  CHANGELOG.md  README.md  camp2ascii.py  pyproject.toml  test.ipynb  test.py  test_suite.cr1x  test_suite.tdf  testhelp.py  tests.py
.github/workflows/: tests.yml
camp2ascii/: __init__.py  __main__.py  camp2ascii.py  cli.py  constants.py  decode.py  definitions.py  filedefinition.py  formats.py  headers.py  ingest.py  logginghandler.py  mymain.py  output.py  parsingandio.py  pipeline.py  process.py  restructure.py  typeconversion.py  utils.py  warninghandler.py
tests/: npt.py  test.ipynb  test.py  test_install.sh  test_suite.cr1x
tests/c2a/: TOA5_TOB1_full23_2026_02_19_0946.csv  TOA5_TOB3_long20.csv  test.csv
tests/toa5-c2a/: 23313_Site4_300Sec5_decoded_numpy.csv  klhjadsf.csv
