[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camp2a
version = "1.0.1"
description = "Convert Campbell Scientific TOB1/TOB2/TOB3 files to ASCII (TOA5)."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Alexander Fox" }
]
keywords = ["campbell", "tob", "toa5", "logger", "cardconvert", "csci", "tob1", "tob2", "tob3", "card convert", "tob32", "CSIDFT_convert", "loggernet"]
classifiers = [
  "Development Status :: 2 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]
dependencies = ["numpy>=1.21.3","pandas>=1.4.0"]

[project.optional-dependencies]
progress = ["tqdm>=4.0"]

[project.urls]
Repository = "https://github.com/alextsfox/camp2ascii"
Changelog = "https://github.com/alextsfox/camp2ascii/blob/master/CHANGELOG.md"

[project.scripts]
camp2ascii = "camp2ascii.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["camp2ascii*"]2ascii"]
include-package-data = true